# Clox

./: .gitignore  CMakeLists.txt  README.md  clox
src/: chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  semantics.txt  table.c  table.h  test.lox  test_super.lox  value.c  value.h  vm.c  vm.h
tests/: run_tests.sh
tests/classes/: InitReturnTest.lox
tests/clox/: exp.txt
tests/controlflow/: LogicalOperatorsTest.lox  LogicalOperatorsTest.lox.expected  WhileLoopTest.lox  WhileLoopTest.lox.expected
tests/functions/: FunctionClosureTest.lox  FunctionClosureTest.lox.expected  FunctionReturnTest.lox  FunctionReturnTest.lox.expected
tests/stmts/: VariableTest.lox  VariableTest.lox.expected  stmtTest.lox.expected
